fix: make icon-btns larger on mobile screens

--- a/app/static/css/screen_sizes.css
+++ b/app/static/css/screen_sizes.css
@@ -52,6 +52,7 @@
 @media (width <= 64.4rem) {
   :root {
     --content-nested-padding: 0.375rem;
+    --icon-btn-height: 1.75rem;
   }
 
   .header {
